--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "MBProgressHUD"]
 	path = MBProgressHUD
 	url = git://github.com/matej/MBProgressHUD.git
+[submodule "asi-http-request"]
+	path = asi-http-request
+	url = git://github.com/pokeb/asi-http-request.git
+[submodule "json-framework"]
+	path = json-framework
+	url = git://github.com/stig/json-framework
+[submodule "UIDevice-with-UniqueIdentifier-for-iOS-5"]
+	path = UIDevice-with-UniqueIdentifier-for-iOS-5
+	url = git://github.com/gekitz/UIDevice-with-UniqueIdentifier-for-iOS-5.git
+[submodule "RestKit"]
+	path = RestKit
+	url = git://github.com/RestKit/RestKit.git
